--- a/projects/mawhea/ngx-core/theme/variables.scss
+++ b/projects/mawhea/ngx-core/theme/variables.scss
@@ -59,37 +59,44 @@
   --ion-color-medium-shade: #8b8b8b;
   --ion-color-medium-tint: #a8a8a8;
 
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
+  --ion-color-light: #ECEFF1;
+  --ion-color-light-rgb: 236,239,241;
   --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #d0d2d4;
+  --ion-color-light-tint: #eef1f2;
 
-  --ion-background-color: var(--ion-color-background-contrast);
-  --ion-background-color-rgb: var(--ion-color-background-contrast-rgb);
+  --ion-background-color: var(--ion-color-background-light);
+  --ion-background-color-rgb: var(--ion-color-background-light-rgb);
   --ion-text-color: #000000;
   --ion-text-color-rgb: 0, 0, 0;
 
-  --ion-color-step-50: #f2f2f2;
-  --ion-color-step-100: #e6e6e6;
-  --ion-color-step-150: #d9d9d9;
-  --ion-color-step-200: #cccccc;
-  --ion-color-step-250: #bfbfbf;
-  --ion-color-step-300: #b3b3b3;
-  --ion-color-step-350: #a6a6a6;
-  --ion-color-step-400: #999999;
-  --ion-color-step-450: #8c8c8c;
-  --ion-color-step-500: #808080;
-  --ion-color-step-550: #737373;
-  --ion-color-step-600: #666666;
-  --ion-color-step-650: #595959;
-  --ion-color-step-700: #4d4d4d;
-  --ion-color-step-750: #404040;
-  --ion-color-step-800: #333333;
-  --ion-color-step-850: #262626;
-  --ion-color-step-900: #191919;
-  --ion-color-step-950: #0d0d0d;
+  --ion-color-step-50: #c5cdd1;
+  --ion-color-step-100: #bac2c6;
+  --ion-color-step-150: #b0b8bb;
+  --ion-color-step-200: #a6adb0;
+  --ion-color-step-250: #9ba2a5;
+  --ion-color-step-300: #91979a;
+  --ion-color-step-350: #878c8f;
+  --ion-color-step-400: #7c8284;
+  --ion-color-step-450: #727779;
+  --ion-color-step-500: #686c6e;
+  --ion-color-step-550: #5d6163;
+  --ion-color-step-600: #535658;
+  --ion-color-step-650: #484c4d;
+  --ion-color-step-700: #3e4142;
+  --ion-color-step-750: #343637;
+  --ion-color-step-800: #292b2c;
+  --ion-color-step-850: #1f2021;
+  --ion-color-step-900: #151616;
+  --ion-color-step-950: #0a0b0b;
+
+  --ion-item-background: var(--ion-color-light);
+  --ion-toolbar-background: var(--ion-color-light);
+  --ion-toolbar-border-color: var(--ion-color-step-250);
+  --ion-tab-bar-background: var(--ion-color-light);
+  //--ion-card-background: var(--ion-color-light);
+  --ion-card-background: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -175,8 +182,8 @@ body.dark {
  */
 
 .ios body.dark {
-  --ion-background-color: var(--ion-color-background);
-  --ion-background-color-rgb: var(--ion-color-background-rgb);
+  --ion-background-color: var(--ion-color-background-dark);
+  --ion-background-color-rgb: var(--ion-color-background-dark-rgb);
 
   --ion-text-color: #ffffff;
   --ion-text-color-rgb: 255, 255, 255;
@@ -215,8 +222,8 @@ body.dark {
  */
 
 .md body.dark {
-  --ion-background-color: var(--ion-color-background);
-  --ion-background-color-rgb: var(--ion-color-background-rgb);
+  --ion-background-color: var(--ion-color-background-dark);
+  --ion-background-color-rgb: var(--ion-color-background-dark-rgb);
 
   --ion-text-color: #ffffff;
   --ion-text-color-rgb: 255, 255, 255;
@@ -255,10 +262,16 @@ ion-item {
   --transition: none;
 }
 
-input.mat-input-element {
+input.mat-input-element,
+textarea.mat-input-element,
+input,
+textarea {
   color: black;
 }
 
-body.dark input.mat-input-element {
+body.dark input.mat-input-element,
+body.dark textarea.mat-input-element,
+body.dark input,
+body.dark textarea {
   color: white;
 }
